version/stable/_sources/api/ansys/mechanical/stubs/v241/Ansys/ACT/Automation/Mechanical/FE/CDB/CommandElementSurfaceLoadValues.rst.txt
.. vale off



:class:`CommandElementSurfaceLoadValues`
========================================

.. py:class:: ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.FE.CDB.CommandElementSurfaceLoadValues

   Bases: :py:obj:`object`


   
   Values associated to an element surface load from a SFEBLOCK command.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: CommandElementSurfaceLoadValues

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~ValueCount`
            - Gets the number of values.
          * - :py:attr:`~Values`
            - Gets the values.







Property detail
---------------
.. py:property:: ValueCount
   :type: Optional[int]

   
   Gets the number of values.
















   ..
       !! processed by numpydoc !!

.. py:property:: Values
   :type: Optional[tuple[Any]]

   
   Gets the values.
















   ..
       !! processed by numpydoc !!







.. vale on